--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     .copy {
       padding: 2.5% 10%;
     }
-    .linediv-l {
+    .linediv-1 {
       border-bottom: 1px white solid;
     }
     .linediv-r {
@@ -136,12 +136,13 @@
     </div>
     <div class="row-fluid pitch">
       <div class="span5 offset1 video">
-        <img class="img-polaroid" src="http://placehold.it/480x300">
+        <img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300">
       </div>
 
       <div class="span5 actions">
-        <div class="span8 offset2">
-          <div class="statistics">
+        <div class="row-fluid">
+         <div class="span8 offset2">
+          <div class="row-fluid statistics">
             <div class="span4">
 
               <div class="linediv-1">
@@ -150,7 +151,7 @@
             </div>
             <div class="span4">
               <div class="linediv-c">
-               <h3>$6000</h3> <p>of $10,000</p>
+               <h3>$6000</h3> <p>$10000</p>
               </div>
             </div>
             <div class="span4">
@@ -158,27 +159,34 @@
               <h3>10</h3> <p>days left</p>
               </div>
             </div>
-          </div>
+           </div>
         </div>
+       <div class="row-fluid">
         <div class="span10 offset1">
           <div class="thermometer progress active">
             <div class="bar bar-success" style="width: 60%;"></div>
             <div class="bar bar-warning" style="width: 40%;"></div>       
           </div>
         </div>
+       </div>
+       <div class="row-fluid">
         <div class="span6 offset3 order">
           <button class="btn btn-success btn-large">Preorder</button>
         </div>
+        </div>
+        <div class="row-fluid">
         <div class="span8 offset2 social">
           <button class="btn btn-twitter"><i class="icon-twitter"></i> | Twitter</button>
           <button class="btn btn-facebook"><i class="icon-facebook"></i> | Facebook</button>
         </div>
       </div>
+     </div>
+    </div>
     </div>
 
     <div class="row-fluid section1">
       <div class="span5 offset1 asset">
-        <img class="img-polaroid" src="http://placehold.it/480x300">
+        <img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300">
       </div>
       <div class="span5 copy">
         <p>
@@ -194,7 +202,7 @@
         </p>
       </div>
     <div class="span5 asset">
-      <img class="img-polaroid" src="http://placehold.it/480x300">
+      <img class="img-polaroid" alt="Placeholder" src="http://placehold.it/480x300">
     </div>
   </div>
 
