Added pay with bitcoin

--- a/index.html
+++ b/index.html
@@ -190,7 +190,13 @@
        </div>
        <div class="row-fluid">
         <div class="span6 offset3 order">
-          <button class="btn btn-success btn-large">Preorder</button>
+          <a class="coinbase-button"
+             data-button-style="custom_large"
+             data-button-text="Preorder with Bitcoin"              
+             data-code="3c921bfcc7fc515adfe82a64b16e3834"
+             href="https://coinbase.com/checkouts/3c921bfcc7fc515adfe82a64b16e3834">Preorder With Bitcoin</a>
+          <script src="https://coinbase.com/assets/button.js"
+          type="text/javascript"></script>
         </div>
         </div>
         <div class="row-fluid">
